pages + overflow css overflow issue

--- a/styles/index.css
+++ b/styles/index.css
@@ -35,9 +35,6 @@
   }
 
   .index-content {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
     max-width: 100%;
   }
 }
