--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,4 +1,19 @@
+.anton-sc-regular {
+  font-family: "Anton SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.amarante-regular {
+  font-family: "Amarante", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .h1 {
+  font-family: "Anton SC", serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: var(--scale-60);
   text-transform: uppercase;
   line-height: 1.2;
@@ -37,4 +52,7 @@
 }
 
 @media (max-width: 767px) {
+  .h1 {
+    font-size: 42px;
+  }
 }
